# LaTeX-wc

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  sample.tex
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  style.yml  tests.yml
assets/: sample.tex
src/: counting.py  writers.py
src/latex_wc/: cli.py  discovery.py  io_utils.py  latex_tokens.py  models.py
tests/: test_cli.py  test_counting.py  test_discovery.py  test_io_utils.py  test_models.py  test_writers.py
